hledger/test/errors/csvstatusparse.csv.rules
skip 3
date %1
status %2
